# course-spider

./: .env.example  .gitignore  README.md  docker-compose.yml  gemini.md  ncu_courses.json  next.config.ts  package-lock.json  package.json  schedule.txt  schema.sql  supabase_schema.sql  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: ci.yml
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  trace
.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/types/: validator.ts
backend/: Dockerfile  courses.db  database.py  init_db.py  main.py  pyproject.toml  run_scraper.py
backend/data/: cmu.json  mit.json  ucb.json
backend/scrapers/: cmu.py  mit.py  stanford.py  ucb.py  uni.py
backend/tests/: test_cmu.py  test_mit.py  test_stanford.py  test_ucb.py
data/: stanford_courses.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
src/: auth.config.ts  auth.ts  middleware.ts  proxy.ts
src/actions/: courses.ts
src/app/: globals.css  layout.tsx  page.tsx
src/data/: courses.json
src/dictionaries/: en.json  zh.json
src/lib/: auth-adapter.ts  d1.ts  db.ts  dictionary.ts  email.ts
src/scripts/: Courses Report Jan 18 2026.csv  debug-env.ts  (+15 more)
(+159 files in other folders)
